# classification-waste

./: .gitignore  pyproject.toml  requirements.txt
app/: basic_classification.py  main.py
app/logic/: detection_logic.py
app/ui/: main_window.py
logs/fit/: events.out.tfevents.1742648136.togame.261917.0.v2
models_train/efficientnet_classifier_saved_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
models_train/efficientnet_classifier_saved_model/variables/: variables.index
models_train/mobilenet_v2_saved_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
models_train/mobilenet_v2_saved_model/variables/: variables.index
models_train/vgg16_classifier_saved_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
models_train/vgg16_classifier_saved_model/variables/: variables.index
src/: best_hyp.py  best_model.py  inference.py  pet_bottle_classification_mobilenet_v2.py  pet_bottle_classification_v1.py  pet_bottle_classification_vgg16.py  plotting_csv.py  raviteja_cnn.py  raviteja_cnn_hyp.py
src/logs/fit/: events.out.tfevents.1742645121.togame.217849.2.v2
src/logs/fit/train/: events.out.tfevents.1742644887.togame.217849.0.v2
src/logs/fit/validation/: events.out.tfevents.1742644891.togame.217849.1.v2
src/old/: pet_bottle_classification_mobilenet_v2.py  pet_bottle_classification_mobilenetv2_imagedatagen.py  pet_bottle_classification_vgg16_imagedategen.py
src/services/: partition_dataset.py
